# RTCG

./: .gitignore  CMakeLists.txt  IntFunc.cpp  README.md
src/: CGTShare.h  Code.cpp  CodeTree.cpp  CodeTree.h  ElementData.cpp  FuncArgs.cpp  FuncArgs.h  IntFunc.cpp  IntFunc.h  Objects.cpp  Parser.cpp  Runner.cpp  direct.cpp  direct.h  dllmain.cpp  share.h
